--- a/views/498.ejs
+++ b/views/498.ejs
@@ -1,10 +1,10 @@
 <div id="498">
   <div class="container text-center">
-    <h1>Sorry, that link is expired, or<br/><span class="mobile-spacer">&nbsp;</span>it has already been used.</h1>
+    <h1>Désolé, le lien a expiré, ou<br/><span class="mobile-spacer">&nbsp;</span>a déjà été utilisé.</h1>
     <hr/>
     <div class="help">
-      <p>Need further help accessing your account?<br/><span class="mobile-spacer">&nbsp;</span>Please <a href="/contact">contact support</a> or request a new <a href="/password/forgot">password reset.</a></p>
-      <a class="btn btn-lg btn-outline-dark" href="/password/forgot">Reset password</a>
+      <p>Besoin d'aide pour accéder à votre compte ?<br/><span class="mobile-spacer">&nbsp;</span> Veuillez <a href="/contact">contacter le support</a> ou demander une nouvelle <a href="/password/forgot">réinitialisation de mot de passe.</a></p>
+      <a class="btn btn-lg btn-outline-dark" href="/password/forgot">Réinitialiser mon mot de passe</a>
     </div>
   </div>
 </div>
