--- a/views/pages/dashboard/welcome.ejs
+++ b/views/pages/dashboard/welcome.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Tableau de logs</h1>
     <hr/>
-
+    <div id="main-table"></div>
     
   </div>
   <router-view></router-view>
