--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -39,13 +39,8 @@
     <% /* Auto-injected «link» tags: */ %>
     <!--STYLES-->
     <link rel="stylesheet" href="/dependencies/bootstrap-4/bootstrap-4.css">
+    <link rel="stylesheet" href="/dependencies/datatables/jquery.dataTables.min.css">
     <link rel="stylesheet" href="/dependencies/fontawesome.css">
-    <link rel="stylesheet" href="/dependencies/kingtable/styles/kingtable.clear.css">
-    <link rel="stylesheet" href="/dependencies/kingtable/styles/kingtable.core.css">
-    <link rel="stylesheet" href="/dependencies/kingtable/styles/kingtable.css">
-    <link rel="stylesheet" href="/dependencies/kingtable/styles/kingtable.dark.css">
-    <link rel="stylesheet" href="/dependencies/kingtable/styles/kingtable.flatblack.css">
-    <link rel="stylesheet" href="/dependencies/kingtable/styles/kingtable.midnight.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
@@ -144,9 +139,7 @@
     <script src="/dependencies/vue-router.js"></script>
     <script src="/dependencies/bootstrap-4/bootstrap-4.bundle.js"></script>
     <script src="/dependencies/cloud.js"></script>
-    <script src="/dependencies/kingtable/kingtable.js"></script>
-    <script src="/dependencies/kingtable/kingtable.xlsx.js"></script>
-    <script src="/dependencies/kingtable/locale/kingtable.it.js"></script>
+    <script src="/dependencies/datatables/jquery.dataTables.min.js"></script>
     <script src="/dependencies/moment.js"></script>
     <script src="/dependencies/parasails.js"></script>
     <script src="/js/cloud.setup.js"></script>
