--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -39,6 +39,7 @@
     <% /* Auto-injected «link» tags: */ %>
     <!--STYLES-->
     <link rel="stylesheet" href="/dependencies/bootstrap-4/bootstrap-4.css">
+    <link rel="stylesheet" href="/dependencies/datatables/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="/dependencies/datatables/jquery.dataTables.min.css">
     <link rel="stylesheet" href="/dependencies/fontawesome.css">
     <link rel="stylesheet" href="/styles/importer.css">
@@ -139,6 +140,7 @@
     <script src="/dependencies/vue-router.js"></script>
     <script src="/dependencies/bootstrap-4/bootstrap-4.bundle.js"></script>
     <script src="/dependencies/cloud.js"></script>
+    <script src="/dependencies/datatables/dataTables.bootstrap4.min.js"></script>
     <script src="/dependencies/datatables/jquery.dataTables.min.js"></script>
     <script src="/dependencies/moment.js"></script>
     <script src="/dependencies/parasails.js"></script>
