--- a/assets/styles/pages/dashboard/welcome.less
+++ b/assets/styles/pages/dashboard/welcome.less
@@ -1,4 +1,17 @@
 #welcome {
   padding-top: 75px;
   padding-bottom: 75px;
+
+	#main-table_wrapper {
+		margin: 5px;
+	}
+	#main-table_paginate > ul > li > a {
+		border: 1px solid #dee2e6;
+	}
+	#main-table {
+		max-width: 100%;
+	}
+	.individual-search {
+		max-width: 30vw;
+	}
 }
