--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -60,6 +60,7 @@
           <div class="nav-item dropdown d-none d-sm-block">
             <a class="nav-link dropdown-toggle" id="header-account-menu-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compte</a>
             <div class="dropdown-menu account-menu" aria-labelledby="header-account-menu-link">
+              <a class="dropdown-item" href="/signup">Enregister un compte</a>
               <a class="dropdown-item" href="/account">Paramètres</a>
               <a class="dropdown-item" href="/logout">Se déconnecter</a>
             </div>
@@ -74,11 +75,11 @@
          
           <!-- signup only available to already connected users -->
           <!-- Only in desktop nav -->
-          <div class="form-inline d-none ml-2 d-md-block" >
+          <!--<div class="form-inline d-none ml-2 d-md-block" >
             <a class="btn btn-outline-info" href="/signup">Enregister un compte</a>
-          </div>
+          </div>-->
           <!-- Only in mobile nav -->
-          <a class="nav-item nav-link text-info ml-2 d-block d-md-none" href="/signup">Enregistrer un compte</a>
+          <!--<a class="nav-item nav-link text-info ml-2 d-block d-md-none" href="/signup">Enregistrer un compte</a>-->
           
           <% } %>
         </div>
