--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -23,6 +23,7 @@
 // Per-page styles
 @import 'pages/homepage.less';
 @import 'pages/dashboard/welcome.less';
+@import 'pages/dashboard/graphs.less';
 @import 'pages/entrance/signup.less';
 @import 'pages/entrance/confirmed-email.less';
 @import 'pages/entrance/login.less';
