--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -5,6 +5,9 @@
 	}
 	#main-table {
 		max-width: 100%;
+		input[type="text"] {
+			width: 100%;
+		}
 	}
 	.individual-search {
 		max-width: 30vw;
@@ -13,8 +16,11 @@
 		height: 20px;
 	}
 }
+.cursor {
+	cursor: pointer;
+}
 
-
+/* TABLE */
 .dt-grey {
 	background-color: #604a7b33;
 }
@@ -33,4 +39,18 @@
 
 .dt-black {
 	background-color: #2223;
+}
+
+
+/* GRAPHS */
+
+.axis path,
+.axis line {
+  fill: none;
+	stroke: black;
+	shape-rendering: crispEdges;
+}
+.axis text {
+	font-family: sans-serif;
+	font-size: 11px;
 }
