--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10757,3 +10757,31 @@ a.text-dark:focus {
   display: none;
 }
 
+body {
+  margin: 0px;
+}
+
+.domain {
+  display: none;
+}
+
+.tick line {
+  stroke: #C0C0BB;
+}
+
+.tick text {
+  fill: #8E8883;
+  font-size: 20pt;
+  font-family: sans-serif;
+}
+
+.axis-label {
+  fill: #635F5D;
+  font-size: 50pt;
+  font-family: sans-serif;
+}
+
+#graphlive {
+  width: 80vw;
+}
+
