--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -34,6 +34,13 @@ $screen-xxl: 1720px !default;
     border-bottom: 1px solid #ced4da;
   }
 }
+.togglebtn {
+  margin-left:.2rem;
+  margin-right:.2rem;
+}
+.date_range_filter {
+  max-width: 100px;
+}
 
 table input, table select {
   width: 100%;
