--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -56,6 +56,10 @@ table input, table select {
 	background-color: #604a7b33;
 }
 
+.dt-orange {
+  background-color: #ffc277b8;
+}
+
 .dt-red {
 	background-color: #ff000033;
 }
@@ -76,10 +80,10 @@ table input, table select {
 }
 .dt-buttons.btn-group {
   margin-left: 2rem;
- @include media-breakpoint-down(xl) {
+  @include media-breakpoint-down(xl) {
     margin-left: 1rem;
   }
- @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(md) {
     float: right;
     padding-bottom: 10px;
     margin-left: 0;
@@ -229,4 +233,10 @@ table input, table select {
 
 .highlight {
   background-color: #ffff8a;
+}
+
+#synthesis {
+  .dt-buttons {
+
+  }
 }
