--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -5,14 +5,14 @@ $screen-xxl: 1720px !default;
     padding-top: .5rem !important;
   }
 
-  #main-table_wrapper {
+  .dataTables_wrapper {
     margin-top: 1rem;
   }
 
-	#main-table_paginate > ul > li > a {
+	.dataTables_paginate  > ul > li > a {
 		border: 1px solid #dee2e6;
 	}
-	#main-table {
+	.dataTable {
 		max-width: 100%;
 		input[type="text"] {
 			width: 100%;
@@ -94,18 +94,18 @@ table input, table select {
     margin-left: -4px;
   }
 }
-#main-table_filter {  
+.dataTables_filter {  
     display: inline-block;
     margin-left: 1rem;
   }
-#main-table_info {  
+.dataTables_info {  
     display: inline-block;
   }
-#main-table_paginate {  
+.dataTables_paginate {  
     display: inline-block;
     float: right;
   }
-#main-table_length {
+.dataTables_length {
   display: inline-block;
   float: left;
 }
