remove require requirement

--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -40,6 +40,10 @@ table input, table select {
   width: 100%;
 }
 
+#synthesis-table_length > label > select {
+  width: initial;
+}
+
 }
 .cursor {
 	cursor: pointer;
