--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import '~bootstrap-select/dist/css/bootstrap-select.min';
+
 @import 'globals';
 
 @import 'pages';
