--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+//@import url('https://fonts.googleapis.com/css?family=Nunito');
 @import '../css/datatables-bootstrap4.css';
 @import './open-iconic-bootstrap.scss';
 
