--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,16 +1,8 @@
 // Fonts
-//@import url('https://fonts.googleapis.com/css?family=Nunito');
-@import '../css/datatables-bootstrap4.css';
-@import './open-iconic-bootstrap.scss';
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-
-@import '~bootstrap-select/dist/css/bootstrap-select.min';
-
-@import 'globals';
-
-@import 'pages';
