--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import '~bootstrap-select/dist/css/bootstrap-select.min';
+@import '~datatables.net-responsive-bs4/css/responsive.bootstrap4.min';
 
 @import 'globals';
 
