--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 
 @import '~bootstrap-select/dist/css/bootstrap-select.min';
 @import '~datatables.net-responsive-bs4/css/responsive.bootstrap4.min';
+@import '~datatables.net-fixedheader-bs4/css/fixedHeader.bootstrap4.min';
 
 @import 'globals';
 
