--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -294,7 +294,10 @@ table input, table select {
 }
 
 .highlight {
-  background-color: #ffff8a;
+  background-color: #feffca;
+}
+tr.success {
+  background-color: #caffd6
 }
 
 // colors
