--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -284,6 +284,7 @@ table input, table select {
 
 /* ADMIN */
 .adminTable {
+  background: white;
   width: 100%;
   td {
     border: 1px solid #333;
