datatables language ok

--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -373,3 +373,13 @@ tr.success {
     }
   }
 }
+
+/* client */
+.submit-container {
+  min-height: 2rem;
+  position: relative;
+  .submit-lang {
+    position: absolute;
+    bottom: 0;
+  }
+}
