better sw locale management

--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -281,7 +281,10 @@ table input, table select {
         font-family: sans-serif;
       }
 
-
+.header-graph label {
+  margin-top: .5rem;
+  margin-bottom: 0;
+}
 #graphlive {
   width: 80vw;
 }
