--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -386,3 +386,11 @@ tr.success {
     bottom: 0;
   }
 }
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
