--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -261,25 +261,22 @@ table input, table select {
 }
 
 
-      body {
-        margin: 0px;
-      }
-      .domain {
-        display: none;
-      }
-      .tick line {
-        stroke: #C0C0BB;
-      }
-      .tick text {
-        fill: #8E8883;
-        font-size: 20pt;
-        font-family: sans-serif;
-      }
-      .axis-label {
-        fill: #635F5D;
-        font-size: 50pt;
-        font-family: sans-serif;
-      }
+.domain {
+  display: none;
+}
+.tick line {
+  stroke: #C0C0BB;
+}
+.tick text {
+  fill: #8E8883;
+  font-size: 20pt;
+  font-family: sans-serif;
+}
+.axis-label {
+  fill: #635F5D;
+  font-size: 50pt;
+  font-family: sans-serif;
+}
 
 .header-graph label {
   margin-top: .5rem;
@@ -337,9 +334,6 @@ tr.success {
 }
 
 // colors
-.color-modal-button {
-  margin: 1rem;
-}
 .color-div-container > div{
   padding: 1rem;
 }
@@ -388,8 +382,8 @@ tr.success {
 }
 
 .dot {
-  height: 10px;
-  width: 10px;
+  height: 1em;
+  width: 1em;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
