--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -162,6 +162,11 @@ table input, table select {
     margin-left: -4px;
   }
 }
+#app .force-refresh-button {
+  transition: opacity .5s;
+  opacity: 0;
+}
+
 .dataTables_filter {  
     display: inline-block;
     margin-left: 1rem;
