compat IE + css input client

--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -1,8 +1,14 @@
 $screen-xxl: 1600px !default;
 .navbar-light .navbar-nav {
   color: rgb(80, 80, 80);
+  .nav-link {
+    color: rgba(0,0,0,.67);
+  }
 }
 
+.nav-link {
+  color: rgba(0,0,0,.67);
+}
 
 @media screen and (max-width: 335px) { 
   .hide-xxs {
