PASDT-83: opti: bundle flatpickr, anychart chargés au clic

--- a/resources/sass/_globals.scss
+++ b/resources/sass/_globals.scss
@@ -3,3 +3,11 @@
     background-color: #343a40;
     border-color: #343a40;
 }
+.btn-primary {
+    background-color: #1a79c7;
+    border-color: #246aa5;
+}
+.btn-success {
+    color: #fff;
+    background-color: #0f8842;
+}
