--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -361,7 +361,7 @@ tr.success {
   background-color: #d5d5d5;
 }
 
-@media screen and (min-width: 576px) and (max-width: 992px) {
+@media screen and (max-width: 992px) {
   #modalRenderMail .modal-dialog.modal-lg {
     max-width: max-content;
   }  
