--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,8 +12,12 @@
 @import '~bootstrap-select/dist/css/bootstrap-select.min';
 @import '~datatables.net-responsive-bs4/css/responsive.bootstrap4.min';
 @import '~datatables.net-fixedheader-bs4/css/fixedHeader.bootstrap4.min';
+@import '~bootstrap-switch-button/css/bootstrap-switch-button.min';
 
 @import 'globals';
 
 @import 'btn-group-resp';
+
 @import 'pages';
+
+@import 'accessibility';
