--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,8 @@
 @import '../css/datatables-bootstrap4.css';
 @import './open-iconic-bootstrap.scss';
 
+@import '~quill/dist/quill.snow.css';
+
 // Variables
 @import 'variables';
 
