package.json upgrade

--- a/resources/sass/_pages.scss
+++ b/resources/sass/_pages.scss
@@ -26,6 +26,9 @@ $screen-xxl: 1600px !default;
   margin-bottom: 0;
 }
 
+.navbar-brand {
+  margin-left: 1rem;
+}
 #main-table {
 
   .th-multiselect {
