--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,7 @@
 @import './open-iconic-bootstrap.scss';
 
 @import '~quill/dist/quill.snow.css';
+@import '~flatpickr';
 
 // Variables
 @import 'variables';
